--- a/index.html
+++ b/index.html
@@ -146,20 +146,24 @@
           </div>
         </section>
       </div>
+      <footer class="links">
+        This project was coded by Maryna Chernilevska and is
+        <a
+          href="https://github.com/MarynaChernilevska/weather-app"
+          class="link"
+          target="_blank"
+          >open-soursed on GitHub</a
+        >
+        and
+        <a
+          href="https://sage-zabaione-5ede2e.netlify.app"
+          class="link"
+          target="_blank"
+          >hosted on Netlify</a
+        >
+      </footer>
     </div>
 
-    <footer class="links">
-      This project was coded by Maryna Chernilevska and is
-      <a href="https://github.com/MarynaChernilevska/weather-app" class="href"
-        >open-soursed on GitHub</a
-      >
-      and
-      <a
-        href="https://app.netlify.com/sites/sage-zabaione-5ede2e/overview"
-        class="href"
-        >hosted on Netlify</a
-      >
-    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
