--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="src/styles.css" rel="stylesheet" type="text/css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +16,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
@@ -25,7 +26,7 @@
   </head>
   <body>
     <div class="mainPage">
-      <div class="container">
+      <div class="container weather-app">
         <header>
           <div class="searchCity">
             <form id="search-form">
@@ -49,31 +50,40 @@
         </header>
         <section>
           <div class="currentWeather">
-            <h1 id="city">Kyiv</h1>
-            <h2 id="degrees-temp">
-              <img
-                class="mainIcon"
-                src="images/rain.png"
-                alt="rain"
-                width="50"
-              />
-              12° <span id="temperatureMetrics">C</span>
-            </h2>
+            <div class="overview">
+              <ul id="mainInfo">
+                <li id="city">Kyiv</li>
+                <li id="date"></li>
+                <li id="sky">Clouds</li>
+              </ul>
+            </div>
+            <div class="d-flex weather-temperature">
+              <div>
+                <img
+                  id="mainIcon"
+                  src="images/rain.png"
+                  alt="rain"
+                  width="50"
+                />
+                <strong id="degrees-temp">12</strong>
+                <span id="units">°C | °F</span>
+              </div>
+              <div>
+                <ul id="more">
+                  <li>
+                    <span class="hum">Humidity:</span>
+                    <span class="humid" id="humidity"></span>
+                    <span class="percentage" id="percentage">%</span>
+                  </li>
 
-            <h2 id="date"></h2>
-            <ul id="more">
-              <li>
-                <span class="hum">Humidity:</span>
-                <span class="humid" id="humidity"></span>
-                <span class="percentage" id="percentage">%</span>
-              </li>
-
-              <li>
-                <span class="wind-speed">Wind:</span>
-                <span class="wind" id="wind"></span>
-                <span class="km">Km/h</span>
-              </li>
-            </ul>
+                  <li>
+                    <span class="wind-speed">Wind:</span>
+                    <span class="wind" id="wind"></span>
+                    <span class="km">Km/h</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </section>
         <section>
@@ -88,7 +98,7 @@
                     alt="storm"
                     width="30"
                   />
-                  <div class="temprature">12</div>
+                  <div class="temprature" id="monday">12</div>
                 </div>
                 <div class="col-2">
                   <div>Tue</div>
@@ -98,7 +108,7 @@
                     alt="cloudy"
                     width="30"
                   />
-                  <div class="temprature">8</div>
+                  <div class="temprature" id="tuesday">8</div>
                 </div>
                 <div class="col-2">
                   <div>Wed</div>
@@ -108,7 +118,7 @@
                     alt="rain"
                     width="30"
                   />
-                  <div class="temprature">9</div>
+                  <div class="temprature" id="wednesday">9</div>
                 </div>
 
                 <div class="col-2">
@@ -119,7 +129,7 @@
                     alt="cloud"
                     width="30"
                   />
-                  <div class="temprature">10</div>
+                  <div class="temprature" id="thursday">10</div>
                 </div>
                 <div class="col-2">
                   <div>Fri</div>
@@ -129,7 +139,7 @@
                     alt="storm"
                     width="30"
                   />
-                  <div class="temprature">8</div>
+                  <div class="temprature" id="friday">8</div>
                 </div>
                 <div class="col-2">
                   <div>Sat</div>
@@ -146,6 +156,7 @@
           </div>
         </section>
       </div>
+
       <footer class="links">
         This project was coded by Maryna Chernilevska and is
         <a
