add unit conversion

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <img id="mainIcon" src="images/rain.png" alt="rain" />
                 <strong id="degrees-temp">12</strong>
                 <span id="units">
-                  <span class="celcium">°C </span>|
-                  <span id="fargh">°F</span></span
+                  <a href="#" id="celcium" class="active">°C </a> |
+                  <a href="#" id="fargh">°F</a></span
                 >
               </div>
               <div>
