remove img in html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="d-flex weather-temperature mainLine">
               <div class="d-flex weather-temperature">
-                <img id="mainIcon" src="images/rain.png" alt="rain" />
+                <img id="mainIcon" alt="rain" />
                 <strong id="degrees-temp"></strong>
                 <span id="units">
                   <a href="#" id="celcium" class="active">°C </a> |
