delete fake data and comments

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   Last updated:
                   <span class="date" id="date"></span>
                 </li>
-                <li id="weatherDeskription">Clouds</li>
+                <li id="weatherDeskription"></li>
               </ul>
             </div>
             <div class="d-flex weather-temperature mainLine">
